# Razi-Challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
src/account_details_update/: __init__.py  account_details.py  account_update_result.py  banking_details.py  cli.py  config.py  logging.py  payment_method.py  ports.py  update_account_details.py
src/account_details_update/application/: __init__.py  commands.py  update_account_details.py
src/account_details_update/bootstrap/: __init__.py  cli.py  logging.py  settings.py
src/account_details_update/browser/: __init__.py  errors.py  playwright_account_updater.py  selectors.py  session.py
src/account_details_update/browser/pages/: __init__.py  _helpers.py  account_page.py  login_page.py  mfa_page.py  page_ready.py
src/account_details_update/entrypoints/: __init__.py  cli.py  settings.py
src/account_details_update/http_api/: __init__.py  api_account_updater.py  errors.py  payment.py  razi_api_client.py  schemas.py
src/account_details_update/http_api/schemas/: __init__.py  _base.py  authentication.py  banking.py
src/account_details_update/infrastructure/: __init__.py  config.py
src/account_details_update/interfaces/: __init__.py
src/account_details_update/support/: __init__.py  fake_data.py  logging.py
tests/integration/: conftest.py  test_api_integration.py  test_browser_integration.py
tests/support/: browser_fakes.py  fake_data.py
tests/unit/: test_account_details.py  test_api_account_updater.py  test_banking_details.py  test_browser_pages.py  test_cli.py  test_http_api_schemas.py  test_payment_method.py  test_playwright_account_updater.py  test_razi_api_client.py  test_update_account_details.py
