[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "razi-engineering-challenge"
version = "0.1.0"
description = "Scaffold for updating account banking and payment method details via browser and REST API adapters."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Razi Engineering Challenge" }
]
dependencies = [
  "playwright>=1.44",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
]

[project.scripts]
account-details-update = "account_details_update.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
packages = ["account_details_update"]
