[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "razi-engineering-challenge"
version = "0.1.0"
description = "Scaffold for updating account banking and payment method details via browser and REST API adapters."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Razi Engineering Challenge" }
]
dependencies = [
  "playwright>=1.44",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
account-details-update = "account_details_update.bootstrap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"
markers = [
    "integration: mark test as requiring live external services (guarded by INTEGRATION_TESTS=1)",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["account_details_update", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src"]
strict = true
